--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,11 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+AroundMe/obj/Debug/XapCacheFile.xml
+AroundMe.v11.suo
+AroundMe.v11.suo
+AroundMe.v11.suo
+AroundMe.v11.suo
+AroundMe/obj/Debug/XapCacheFile.xml
+AroundMe/obj/Debug/XapCacheFile.xml
+AroundMe/obj/Debug/AroundMe.pdb
