--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ AroundMe/obj/Debug/XapCacheFile.xml
 AroundMe/obj/Debug/AroundMe.pdb
 AroundMe/obj/*.*
 AroundMe/Bin/*.*
+AroundMe/AroundMe.csproj.user
