add .user to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,4 @@ AroundMe/obj/Debug/AroundMe.pdb
 AroundMe/obj/*.*
 AroundMe/Bin/*.*
 AroundMe/AroundMe.csproj.user
+AroundMe/AroundMe.csproj.user
